--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^4.5.0",
-    "mongoose": "^6.3.1",
+    "mongoose": "^6.3.3",
     "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
